<resources>
    <string name="app_name">Final Project</string>
    <string name="to_survey_button">Take Survey</string>
    <string name="survey_prompt">Rate your heartburn from 0 to 10</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="username">Enter Name</string>
    <string name="back_Button">Back</string>
    <string name="delete_Button">Delete</string>
    <string name="textBox">Insert text here</string>
    <string name="journal_Button">Journal</string>
    <string name="calendar_Button">Calendar</string>
    <string name="filterButton">Filter</string>
    <string name="title">Title</string>
</resources>
