<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="cs246.finalproject.JournalMode">

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/submit"
        android:onClick="onSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <MultiAutoCompleteTextView
        android:id="@+id/textBox"
        android:layout_width="352dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/textBox"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/title"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="74dp" />

    <ImageButton
        android:id="@+id/backButtonJM"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/white"
        android:tint="@color/buttonPressed"
        android:onClick="onBack"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintVertical_bias="0.307" />

    <ImageButton
        android:id="@+id/addButtonJM"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/white"
        android:tint="@color/buttonPressed"
        android:onClick="addRating"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/backButtonJM"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintVertical_bias="0.307" />

    <ImageButton
        android:id="@+id/deleteButtonJM"
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:srcCompat="@android:drawable/ic_menu_delete"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/red"
        android:tint="@color/white"
        android:onClick="onDelete"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintVertical_bias="0.307" />

</android.support.constraint.ConstraintLayout>
